ingress/ingress-design-system-canadaca-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: design-system-canadaca-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  #tls:
  #- hosts:
  #  - design.canada.ca
  #  secretName: design-system-tls-secret-staging
  rules:
  - host: design.canada.ca
    http:
      paths:
      - backend:
          serviceName: nginx-en
          servicePort: 80
        path: /
